--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  width: 100%;
+  height: 100vh;
   text-align: center;
+  color: #ffa7c4;
+  /* #ffa7c4 pink */
+  /* #373c49 light gray */
 }
 
 .App-logo {
@@ -20,7 +25,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(50px + 2vmin);
   color: white;
 }
 
@@ -28,10 +33,15 @@
   color: #61dafb;
 }
 
+h1 {
+  font-size: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
